app-k8s/policies/network-policy-adservice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 9555
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: recommendationservice
  - from:
    - podSelector:
        matchLabels:
          app: productcatalogservice
  podSelector:
    matchLabels:
      app: adservice
  policyTypes:
  - Ingress
  - Egress
