app-k8s/policies/network-policy-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: checkoutservice
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
